--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "sortable-website",
+  "name": "M49",
   "version": "1.0.0",
   "description": "",
   "main": "m49.js",
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon m49.js"
   },
-  "author": "stefanin",
+  "author": "stefanin"
   "license": "ISC",
   "dependencies": {
     "child_process": "^1.0.2",
