--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon m49.js"
   },
-  "author": "stefanin"
-  "license": "ISC",
+  "author": "stefanin",
   "dependencies": {
     "child_process": "^1.0.2",
     "cookie-session": "^1.4.0",
